# spa-viaggi

./: .gitignore  README.md
apps/backend/: .env.example  README.md  pyproject.toml
apps/backend/scripts/: create_indexes.py  seed_trips.py  seed_users.py
apps/backend/src/: main.py
apps/backend/src/api/: dependencies.py  middleware.py  router.py
apps/backend/src/api/schemas/: __init__.py  activities.py  auth.py  common.py  expenses.py  exports.py  participants.py  trips.py
apps/backend/src/api/v1/: __init__.py  activities.py  auth.py  expenses.py  exports.py  health.py  participants.py  trips.py
apps/backend/src/application/dto/: __init__.py
apps/backend/src/application/use_cases/: __init__.py  activities_service.py  auth_service.py  expenses_service.py  exports_service.py  participants_service.py  serializers.py  trips_service.py
apps/backend/src/core/: bson.py  config.py  dependencies.py  errors.py  logging.py  security.py
apps/backend/src/domain/models/: trip.py  user.py
apps/backend/src/infrastructure/db/: client.py  collections.py  indexes.py  validators.py
apps/backend/src/infrastructure/pdf/: trip_pdf.py
apps/backend/src/infrastructure/queue/: job_queue.py
apps/backend/src/infrastructure/repositories/: __init__.py  activities_repository.py  expenses_repository.py  exports_repository.py  trips_repository.py  users_repository.py
apps/backend/src/tests/contract/: README.md
apps/backend/src/tests/integration/: test_app_import.py
apps/backend/src/tests/unit/: test_security.py
apps/backend/src/workers/: worker_main.py
(+49 files in other folders)
